# haskell-sql-toy

./: README.md  example.json  haskell-sql-toy.cabal  requests_test.py  run.sh  run_scotty.sh  run_svelte.sh  test_post_request.py
app/: Main.hs  Server.hs  Sql_parser.hs
backend/: haskell-sql-toy.cabal  previous_requests.db
backend/app/: Server.hs  Sql_parser.hs
frontend/: package.json  svelte.config.js  vite.config.ts
frontend/src/routes/: +page.svelte  functions.js  history.svelte  query.svelte  table.svelte
