cabal-version:      2.4
name:               haskell-sql-toy
version:            0.1.0.0

executable haskell-sql-toy
    main-is: Server.hs
    exposed-modules:
        Sql_parser
    build-depends:
        base ^>=4.16.1.0,
        attoparsec,
        aeson,
        text,
        unordered-containers,
        bytestring,
        scotty,
        mtl,
        sqlite-simple,
        data-default-class,
        base-compat,
        wai-extra,
        stm,
        http-types,
        wai-cors
    hs-source-dirs:   app
    default-language: Haskell2010
